# quanta_haba

./: README.md  default_prompt.txt
.editor/: launch.json
configuration/: model_config.json
cpp_editor/: CMakeLists.txt
cpp_editor/docs/: DESIGN.md
cpp_editor/reference/: haba_parser.py
cpp_editor/src/c/: MainWindow.cpp  MainWindow.h  html_generator.cpp  html_generator.h  main.cpp
cpp_editor/src/p/: editor.py  haba_parser.py
docs/: IDE_Features.md  demo_design_plan.md  demo_enhancements_ideas.md  demo_video_script.md  editor_demo_display.md  editor_enhancements.md  editor_integration.md  enhancements.md  gui_editor_enhancements.md  haba_tisslm_demo.md  haba_tisslm_enhancements.md  haba_tisslm_implementation_plan.md  haba_tissu_demo.md  integration_enhancements.md  oauth_implementation_guide.md  oauth_instructions.md  oauth_integration.md  plan.md  remaining_enhancements.md  style_guide.md  test_strategy.md
src/c/: CMakeLists.txt
src/c/include/: ConfigManager.h  HabaData.h  HabaParser.h  OAuthClient.h  ScriptAnalyzer.h
src/c/source/: ConfigManager.cpp  HabaParser.cpp  OAuthClient.cpp  ScriptAnalyzer.cpp  cli_editor.cpp  gui_editor.cpp  main.cpp  tui_editor.cpp
src/p/: cli_runner.py  components.py  config_manager.py  default_prompt.txt  display.py  editor.py  external_model_client.py  files.py  haba_parser.py  html_exporter.py  imports.py  linter.py  menu.py  oauth_client.py  requirements.txt  script_runner.py  search.py  snippets.json  test_editor.py  test_oauth.py
src/p/tools/: api_client.py  prompt_packer.py
test/p/: test_editor.py
tests/: test_cli_runner.py  test_linter.py  test_script_runner.py
tests/c/: main.cpp  simple_test_framework.cpp  simple_test_framework.h  test_config_manager.cpp  test_haba_parser.cpp  test_script_analyzer.cpp
tests/p/: run_all_tests.py  test_components.py  test_editor.py  test_editor_temp.py  test_haba_parser.py  test_html_exporter.py  test_quanta_demo.py  test_script_runner.py
